scrollbar fix

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -2,7 +2,7 @@
 
 
 form#search {
-    margin: 0 auto 2rem auto;
+    margin: 1rem auto 2rem auto;
     position: relative;
     display: flex;
     justify-content: center;
