--- a/src/variables.scss
+++ b/src/variables.scss
@@ -99,4 +99,4 @@ $layoutswitch: $breakpoint-medium;
 $layoutswitch-max: $breakpoint-medium-max;
 
 $inputHeight: 38px;
-$headerheight: 9rem;
+$headerheight: 13rem;
